fix dialog height and z-index issues

--- a/www/css/VisitorChat/4.0/operator.css
+++ b/www/css/VisitorChat/4.0/operator.css
@@ -918,3 +918,7 @@ p.stat-title {
 #maincontent form li {
     list-style: none;
 }
+
+.ui-dialog {
+    z-index: 500 !important;
+}
